<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/helper_dashboard" />

    <item
        android:id="@+id/nav_alerts"
        android:icon="@drawable/ic_notification"
        android:title="@string/nearby_alerts" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_map"
        android:title="@string/map" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/helper_history" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />

</menu>