<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/sosFragment"
        android:icon="@drawable/ic_sos"
        android:title="@string/sos" />

    <item
        android:id="@+id/contactsFragment"
        android:icon="@drawable/ic_contacts"
        android:title="@string/contacts" />

    <item
        android:id="@+id/helperDashboardFragment"
        android:icon="@drawable/ic_helper"
        android:title="@string/helper_dashboard" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>